--- a/demo_index.html
+++ b/demo_index.html
@@ -8,8 +8,9 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    <h1>Jerryco</h1>
 
-    <!-- Your GitHub user name -->
+    <h5>lkjasdf@github.com</h5>
     
     <!-- Your favorite coding language -->
 
